fix: fix uneven font issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,8 @@
   --font-sans: Helvetica, Arial, sans-serif;
   --font-serif: 'Times New Roman', Times, serif;
   */
-  --font-serif: 'Times New Roman', Times, serif;
   --font-sans: Helvetica, Arial, sans-serif;
+  --font-serif: Georgia, 'Times New Roman', Times, serif;
 
   --max-font-size: 100px;
   --min-font-size: 60px;
@@ -14,7 +14,7 @@
   --canvas-padding: 4.9rem;
 
   --font-size: 12vw;
-  --font-size-serif: 1.05em;
+  --font-size-serif: 1em;
 
   --background-color: rgb(197, 195, 195);
   --foreground-color: rgb(18, 17, 17);
@@ -108,9 +108,7 @@ main {
   background-color: var(--foreground-color);
   color: var(--background-color);
   */
-  text-shadow:
-    0.01em 0.01em 0.04em var(--foreground-color),
-    -0.01em -0.01em 0.04em var(--foreground-color);
+  text-shadow: 0em 0em 0.04em var(--foreground-color);
 
   filter: blur(0.005em);
 }
